[hw-28&29] Laravel | Tests, Cart functionality, Product Rate

--- a/.env.testing
+++ b/.env.testing
@@ -1,10 +1,10 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:2d6ScXhV4qq5OWOE/k/K5LCwbXyxc+VbIylmoGOtSKs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
