--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,15 @@
         "php": "^8.1.0",
         "bumbummen99/shoppingcart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-notification-channels/telegram": " 2.1",
         "laravel/framework": "^9.19",
+        "laravel/horizon": " 5.10",
         "laravel/sanctum": "^2.14.1",
+        "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "predis/predis": " 2.0",
+        "pschocke/laravel-telegram-login-widget": " 2.0",
         "srmklive/paypal": "^3.0",
         "willvincent/laravel-rateable": "^3.0"
     },
