--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1.0",
+        "appslabke/lara-izitoast": "^1.1",
         "bumbummen99/shoppingcart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-notification-channels/telegram": " 2.1",
@@ -15,6 +16,7 @@
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "laraveldaily/laravel-invoices": "^3.0",
         "predis/predis": " 2.0",
         "pschocke/laravel-telegram-login-widget": " 2.0",
         "srmklive/paypal": "^3.0",
