[hw-35] Laravel | AWS S3

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "laraveldaily/laravel-invoices": "^3.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "league/flysystem-sftp-v3": "^3.0",
         "predis/predis": " 2.0",
         "pschocke/laravel-telegram-login-widget": " 2.0",
         "srmklive/paypal": "^3.0",
